--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,15 @@ dependencies = [
     "accelerate>=1.12.0",
     "datasets>=4.4.1",
     "evaluate>=0.4.6",
+    "fastapi>=0.124.2",
+    "logfire[fastapi]>=4.16.0",
+    "python-dotenv>=1.2.1",
+    "python-multipart>=0.0.20",
     "timm>=1.0.22",
     "torch>=2.9.1",
     "torchvision>=0.24.1",
     "transformers>=4.57.1",
+    "uvicorn[standard]>=0.38.0",
 ]
 
 [tool.uv.sources]
