--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,20 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "accelerate>=1.12.0",
-    "datasets>=4.4.1",
-    "evaluate>=0.4.6",
-    "fastapi>=0.124.2",
-    "logfire[fastapi]>=4.16.0",
-    "python-dotenv>=1.2.1",
-    "python-multipart>=0.0.20",
-    "timm>=1.0.22",
-    "torch>=2.9.1",
-    "torchvision>=0.24.1",
-    "transformers>=4.57.1",
-    "uvicorn[standard]>=0.38.0",
+  "accelerate>=1.12.0",
+  "datasets>=4.4.1",
+  "ddgs>=9.9.3",
+  "evaluate>=0.4.6",
+  "fastapi>=0.124.4",
+  "fastmcp>=2.14.0",
+  "logfire[fastapi]>=4.16.0",
+  "python-dotenv>=1.2.1",
+  "python-multipart>=0.0.20",
+  "timm>=1.0.22",
+  "torch>=2.9.1",
+  "torchvision>=0.24.1",
+  "transformers>=4.57.1",
+  "uvicorn[standard]>=0.38.0",
 ]
 
 [tool.uv.sources]
